--- a/new_config.yaml
+++ b/new_config.yaml
@@ -1,9 +1,9 @@
 # An unique identifier for the head node and workers of this cluster.
-cluster_name: LLMs_Inference
+cluster_name: default
 
 # The maximum number of workers nodes to launch in addition to the head
 # node.
-max_workers: 10
+max_workers: 9
 
 # The autoscaler will scale up the cluster faster with higher upscaling speed.
 # E.g., if the task requires adding more nodes then autoscaler will gradually
@@ -79,15 +79,16 @@ available_node_types:
             BlockDeviceMappings:
                 - DeviceName: /dev/sda1
                   Ebs:
-                      VolumeSize: 140
+                      VolumeSize: 200
             # Additional options in the boto docs.
     ray.worker.default:
         # The minimum number of worker nodes of this type to launch.
         # This number should be >= 0.
-        min_workers: 0
+        min_workers: 2
+
         # The maximum number of worker nodes of this type to launch.
         # This takes precedence over min_workers.
-        max_workers: 2
+        max_workers: 9
         # The node type's CPU and GPU resources are auto-detected based on AWS instance type.
         # If desired, you can override the autodetected CPU and GPU resources advertised to the autoscaler.
         # You can also set custom resources.
@@ -104,16 +105,6 @@ available_node_types:
             # Check https://github.com/ray-project/ray/blob/master/python/ray/autoscaler/_private/aws/config.py
             # for default images for other zones.
             ImageId: ami-09cd5d4402cd6c2aa
-            # Run workers on spot by default. Comment this out to use on-demand.
-            # NOTE: If relying on spot instances, it is best to specify multiple different instance
-            # types to avoid interruption when one instance type is experiencing heightened demand.
-            # Demand information can be found at https://aws.amazon.com/ec2/spot/instance-advisor/
-            InstanceMarketOptions:
-                MarketType: spot
-                # Additional options can be found in the boto docs, e.g.
-                #   SpotOptions:
-                #       MaxPrice: MAX_HOURLY_PRICE
-            # Additional options in the boto docs.
 
 # Specify the node type of the head node (as configured above).
 head_node_type: ray.head.default
@@ -152,19 +143,7 @@ rsync_filter:
 initialization_commands: []
 
 # List of shell commands to run to set up nodes.
-setup_commands:
-    - sudo apt-get update
-    - sudo apt-get upgrade
-    - pip3 install --upgrade pip
-    - pip install -U ray[default]
-    - pip3 install cupy-cuda11x
-    - python3 -c "from cupy.cuda import nccl"
-    - pip3 install alpa
-    - pip3 install "transformers<=4.23.1" fastapi uvicorn omegaconf jinja2
-    - pip3 install jaxlib==0.3.22+cuda111.cudnn805 -f https://alpa-projects.github.io/wheels.html
-    - git clone https://github.com/alpa-projects/alpa.git
-    - git clone https://github.com/pushkarraj/LLMs_Inference.git
-    - pip3 install accelerate
+setup_commands: []
     # Note: if you're developing Ray, you probably want to create a Docker image that
     # has your Ray repo pre-cloned. Then, you can replace the pip installs
     # below with a git checkout <your_sha> (and possibly a recompile).
