--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,15 @@
-_libgcc_mutex==0.1
-_openmp_mutex==5.1
-aiohttp-cors==0.7.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-async-timeout==4.0.2
-attrs==22.2.0
-blessed==1.20.0
-boto3==1.26.99
-botocore==1.29.99
-ca-certificates==2023.01.10
-cachetools==5.3.0
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.3
-colorful==0.5.5
-distlib==0.3.6
-filelock==3.10.6
-frozenlist==1.3.3
-google-api-core==2.11.0
-google-auth==2.16.3
-googleapis-common-protos==1.59.0
-gpustat==1.0.0
-grpcio==1.51.3
-idna==3.4
-jmespath==1.0.1
-jsonschema==4.17.3
-ld_impl_linux-64==2.38
-libffi==3.4.2
-libgcc-ng==11.2.0
-libgomp==11.2.0
-libstdcxx-ng==11.2.0
-msgpack==1.0.5
-multidict==6.0.4
-ncurses==6.4
-numpy==1.24.2
-nvidia-ml-py==11.495.46
-opencensus-context==0.1.3
-opencensus==0.11.2
-openssl==1.1.1t
-pip==23.0.1
-platformdirs==3.2.0
-prometheus-client==0.16.0
-protobuf==4.22.1
-psutil==5.9.4
-py-spy==0.3.14
-pyasn1-modules==0.2.8
-pyasn1==0.4.8
-pydantic==1.10.7
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python==3.9.16
-pyyaml==6.0
-ray==2.3.1
-readline==8.2
-requests==2.28.2
-rsa==4.9
-s3transfer==0.6.0
-setuptools==65.6.3
-six==1.16.0
-smart-open==6.3.0
-sqlite==3.41.1
-tk==8.6.12
-typing-extensions==4.5.0
-tzdata==2022g
-urllib3==1.26.15
-virtualenv==20.21.0
-wcwidth==0.2.6
-wheel==0.38.4
-xz==5.2.10
-yarl==1.8.2
-zlib==1.2.13
+supersuit==3.7.0
+tf2onnx==1.12.1
+timm==0.4.5
+torch-cluster==1.6.0+pt113cu116
+torch-geometric==2.1.0
+torch-scatter==2.1.0+pt113cu116
+torch-sparse==0.6.15+pt113cu116
+torch-spline-conv==1.2.1+pt113cu116
+torchaudio==0.13.0
+transformers==4.23.1
+tune-sklearn==0.4.4
+typer==0.7.0
+uvicorn==0.21.1
+wandb==0.13.4
+zoopt==0.4.1
