--- a/new_config.yaml
+++ b/new_config.yaml
@@ -3,7 +3,7 @@ cluster_name: default
 
 # The maximum number of workers nodes to launch in addition to the head
 # node.
-max_workers: 9
+max_workers: 1
 
 # The autoscaler will scale up the cluster faster with higher upscaling speed.
 # E.g., if the task requires adding more nodes then autoscaler will gradually
@@ -84,11 +84,10 @@ available_node_types:
     ray.worker.default:
         # The minimum number of worker nodes of this type to launch.
         # This number should be >= 0.
-        min_workers: 2
-
+        min_workers: 1
         # The maximum number of worker nodes of this type to launch.
         # This takes precedence over min_workers.
-        max_workers: 9
+        max_workers: 1
         # The node type's CPU and GPU resources are auto-detected based on AWS instance type.
         # If desired, you can override the autodetected CPU and GPU resources advertised to the autoscaler.
         # You can also set custom resources.
@@ -105,22 +104,26 @@ available_node_types:
             # Check https://github.com/ray-project/ray/blob/master/python/ray/autoscaler/_private/aws/config.py
             # for default images for other zones.
             ImageId: ami-09cd5d4402cd6c2aa
+            BlockDeviceMappings:
+                - DeviceName: /dev/sda1
+                  Ebs:
+                      VolumeSize: 200
 
 # Specify the node type of the head node (as configured above).
 head_node_type: ray.head.default
 
 # Files or directories to copy to the head and worker nodes. The format is a
 # dictionary from REMOTE_PATH: LOCAL_PATH, e.g.
-file_mounts: {
+file_mounts: {"/home/ray/opt_weights": "/home/rishabh/LLMs_Inference/opt_weights"}
   #    "/path1/on/remote/machine": "/path1/on/local/machine",
   #    "/path2/on/remote/machine": "/path2/on/local/machine",
-}
+
 
 # Files or directories to copy from the head node to the worker nodes. The format is a
 # list of paths. The same path on the head node will be copied to the worker node.
 # This behavior is a subset of the file_mounts behavior. In the vast majority of cases
 # you should just use file_mounts. Only use this if you know what you're doing!
-cluster_synced_files: []
+cluster_synced_files: ["/home/ray/opt_weights"]
 
 # Whether changes to directories in file_mounts or cluster_synced_files in the head node
 # should sync to the worker node continuously
@@ -143,7 +146,21 @@ rsync_filter:
 initialization_commands: []
 
 # List of shell commands to run to set up nodes.
-setup_commands: []
+setup_commands:
+    - sleep 4
+    - sudo apt update
+    - sudo apt install -y python3-pip python-is-python3
+    - pip install ray[default] boto3
+    - pip3 install --upgrade pip
+    - pip3 install cupy-cuda11x
+    - python3 -c "from cupy.cuda import nccl"
+    - pip3 install alpa
+    - pip3 install jaxlib==0.3.22+cuda111.cudnn805 -f https://alpa-projects.github.io/wheels.html
+    - pip3 install "transformers==4.23.1" fastapi uvicorn omegaconf jinja2
+    - pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113
+    - pip3 install accelerate==0.18.0
+    - git clone https://github.com/alpa-projects/alpa.git
+    - pip3 install -e alpa/examples
     # Note: if you're developing Ray, you probably want to create a Docker image that
     # has your Ray repo pre-cloned. Then, you can replace the pip installs
     # below with a git checkout <your_sha> (and possibly a recompile).
@@ -153,7 +170,6 @@ setup_commands: []
 
 # Custom commands that will be run on the head node after common setup.
 head_setup_commands: []
-
 # Custom commands that will be run on worker nodes after common setup.
 worker_setup_commands: []
 
