--- a/config.yaml
+++ b/config.yaml
@@ -114,16 +114,16 @@ head_node_type: ray.head.default
 
 # Files or directories to copy to the head and worker nodes. The format is a
 # dictionary from REMOTE_PATH: LOCAL_PATH, e.g.
-file_mounts: {"/home/ray/opt_weights": "/home/rishabh/LLMs_Inference/opt_weights"}
-  #    "/path1/on/remote/machine": "/path1/on/local/machine",
-  #    "/path2/on/remote/machine": "/path2/on/local/machine",
+file_mounts: {"/home/ray/opt_weights": "/home/rishabh/LLMs_Inference/opt_weights",}
+#    "/path1/on/remote/machine": "/path1/on/local/machine",
+#    "/path2/on/remote/machine": "/path2/on/local/machine",
 
 
 # Files or directories to copy from the head node to the worker nodes. The format is a
 # list of paths. The same path on the head node will be copied to the worker node.
 # This behavior is a subset of the file_mounts behavior. In the vast majority of cases
 # you should just use file_mounts. Only use this if you know what you're doing!
-cluster_synced_files: ["/home/ray/opt_weights"]
+cluster_synced_files: []
 
 # Whether changes to directories in file_mounts or cluster_synced_files in the head node
 # should sync to the worker node continuously
@@ -148,9 +148,10 @@ initialization_commands: []
 # List of shell commands to run to set up nodes.
 setup_commands:
     - sleep 4
-    - sudo apt update
-    - sudo apt install -y python3-pip python-is-python3
-    - pip install ray[default] boto3
+    - sudo apt-get update
+    - sudo apt-get upgrade -y
+    - sudo apt-get install -y python3-pip python-is-python3
+    - pip3 install ray[default] boto3
     - pip3 install --upgrade pip
     - pip3 install cupy-cuda11x
     - python3 -c "from cupy.cuda import nccl"
