--- a/config.yaml
+++ b/config.yaml
@@ -115,8 +115,9 @@ head_node_type: ray.head.default
 # Files or directories to copy to the head and worker nodes. The format is a
 # dictionary from REMOTE_PATH: LOCAL_PATH, e.g.
 file_mounts: {"/home/ray/opt_weights": "/home/rishabh/LLMs_Inference/opt_weights",}
-#    "/path1/on/remote/machine": "/path1/on/local/machine",
-#    "/path2/on/remote/machine": "/path2/on/local/machine",
+#   transfering all the weights to each nodes.
+#   "/path1/on/remote/machine": "/path1/on/local/machine",
+#   "/path2/on/remote/machine": "/path2/on/local/machine",
 
 
 # Files or directories to copy from the head node to the worker nodes. The format is a
